src/styles/global.scss
@use "variables" as *;
@use "mixins" as *;


html {
  scroll-behavior: smooth;
}

body {
  font-family: "Yuji Syuku", serif;
  font-size: 1rem;
  line-height: 1.8;
}

img {
  display: block;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.section {
  padding: 80px 20px;

  @include sp {
    padding: 48px 20px;
  }
}

.inner {
  max-width: 1280px;
  width: 100%;
  margin: 0 auto;
}

